# robot_qs

./: Dockerfile.txt  README.md  docker-compose.yml  install_libraries.sh  run.sh
qs_robot/realsense-ros-2.1.0/: .travis.yml
qs_robot/vision_process/: CMakeLists.txt
qs_robot/vision_process/src/: get_xlegrobot_position.cpp  get_xlegrobot_position_copy.cpp  test_image_recognition.cpp  test_realsense.cpp
qs_robot/xleg_controller/: CMakeLists.txt  package.xml
qs_robot/xleg_controller/src/: mainwindow.cpp  mainwindow.ui  messagethread.h  motionctrldlg.cpp  test_single_motor.cpp  testdirectctrldlg.cpp  testdirectctrldlg.h
qs_robot/xleg_lowersys/launch/: xleg_lowersys.launch
qs_robot/xleg_lowersys/src/: node.cpp  pub_footforce.cpp  pub_imu.cpp  pub_ir_sensor.cpp  robot_thread.h  temp
qs_robot/xleg_msgs/: CMakeLists.txt  package.xml
qs_robot/xleg_msgs/msg/: JointState.msg  JointsState.msg
qs_robot/xleg_msgs/srv/: gaitControl.srv
qs_robot/xleg_rosbridge/: CMakeLists.txt  README.md  package.xml
qs_robot/xleg_rosbridge/launch/: rosbridge_complete.launch
qs_robot/xleg_rosbridge/scripts/: rosbridge_service.sh
qs_robot/xleg_rosbridge/src/: rosbridge_topic_manager.cpp
qs_robot/xleg_rosbridge/systemd/: rosbridge.service
realsense-ros-2.1.0/realsense2_camera/scripts/: rs2_listener.py  rs2_test.py
serial/build-tests-QT_5_ROS-Default/: CMakeCache.txt
vision_process/: package.xml
xleg_controller/src/: mainwindow.h  messagethread.cpp  motionctrldlg.h  motionctrldlg.ui  process_cam.cpp  test.cpp  testdirectctrldlg.ui
xleg_lowersys/: CMakeLists.txt  package.xml
xleg_lowersys/launch/: ir_sensor.launch
xleg_lowersys/src/: robot_function.cpp  robot_function.h  robot_thread.cpp
xleg_msgs/msg/: BodyState.msg  FootForce.msg  FootsForce.msg
xleg_msgs/srv/: bodyControl.srv  dataSave.srv  motorCode.srv  servoControl.srv
xleg_rosbridge/: IMPLEMENTATION_SUMMARY.md
xleg_rosbridge/cfg/: RosbridgeTopic.cfg
xleg_rosbridge/launch/: rosbridge.launch
