<?xml version="1.0"?>
<package format="2">
  <name>xleg_rosbridge</name>
  <version>0.0.0</version>
  <description>Kuavo Robot Rosbridge package for Web communication interface</description>

  <maintainer email="xzy@todo.todo">xzy</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>rosapi</exec_depend>
  <exec_depend>xleg_msgs</exec_depend>

  <export>
  </export>

</package>

